Enable module rewrite

--- a/data/etc/extra/httpd-vhosts.conf
+++ b/data/etc/extra/httpd-vhosts.conf
@@ -21,10 +21,13 @@
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 
+ServerName localhost
+
 <VirtualHost *:80>
     ServerAdmin webdesign@alexander-weigelt.de
     DocumentRoot "/var/www/html"
-    ServerName localhost
+    ServerName test.local
+	ServerAlias www.test.local
 	<Directory "/var/www/html">
 		Options Indexes FollowSymLinks ExecCGI Includes
 		AllowOverride All
