Add php.ini Configuration File

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ MYSQL_ALLOW_EMPTY_PASSWORD=yes
 
 PATH_MYSQL=./data/mysql
 PATH_HTML=./htdocs
-PATH_VHOST_CONF=./data/etc/extra/httpd-vhosts.conf
+PATH_VHOST_CONF=./data/setup/etc/extra/httpd-vhosts.conf
+PATH_PHP_INI=./data/setup/usr/local/etc/php/php.ini
 
 REPOSITORY=alexanderweigelt/devbox
 CONTAINER_NAME_WEB=devbox
