--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,6 @@ services:
     volumes:
       - ${PATH_HTML}:/var/www/html
       - ${PATH_VHOST_CONF}:/etc/apache2/sites-enabled/httpd-vhosts.conf
+#      - ${PATH_PHP_INI}:/usr/local/etc/php/php.ini
     container_name: ${CONTAINER_NAME_WEB}
     restart: always
