--- a/.env
+++ b/.env
@@ -5,9 +5,8 @@ MYSQL_PASSWORD=
 MYSQL_ALLOW_EMPTY_PASSWORD=yes
 
 PATH_MYSQL=./data/mysql
+PATH_LOGS=./data/logs
 PATH_HTML=./htdocs
-PATH_VHOST_CONF=./data/setup/etc/extra/httpd-vhosts.conf
-PATH_PHP_INI=./data/setup/usr/local/etc/php/php.ini
 
 REPOSITORY=alexanderweigelt/devbox
 CONTAINER_NAME_WEB=devbox
