Enable easier xdebug and beautify code

--- a/.env
+++ b/.env
@@ -9,5 +9,4 @@ PATH_LOGS=./data/logs
 PATH_HTML=./htdocs
 
 REPOSITORY=alexanderweigelt/devbox
-CONTAINER_NAME_WEB=devbox
-CONTAINER_NAME_DB=devbox_db
+TAG=latest
