Use docker volume to store db data

--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
 MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_DATABASE=devbox
+MYSQL_USER=global
+MYSQL_PASSWORD=global
 MYSQL_ALLOW_EMPTY_PASSWORD=yes
-
-PATH_MYSQL=./data/mysql
-PATH_LOGS=./data/logs
-PATH_HTML=./htdocs
+MYSQL_VERSION=latest
 
 REPOSITORY=alexanderweigelt/devbox
 TAG=latest
