Downgrade mysql version but latest doesn't work

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MYSQL_DATABASE=devbox
 MYSQL_USER=global
 MYSQL_PASSWORD=global
 MYSQL_ALLOW_EMPTY_PASSWORD=yes
-MYSQL_VERSION=latest
+MYSQL_VERSION=5.7
 
 REPOSITORY=alexanderweigelt/devbox
 TAG=latest
