Use env file support for docker-compose and clean variables

--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
 MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=devbox
+MYSQL_DATABASE=
 MYSQL_USER=global
 MYSQL_PASSWORD=global
 MYSQL_ALLOW_EMPTY_PASSWORD=yes
-MYSQL_VERSION=5.7
-
-REPOSITORY=alexanderweigelt/devbox
-TAG=latest
