Add new base docker environment architecture (untested)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 *~
 .DS_Store
 .idea/
-data/mysql/*
-data/logs/
-/htdocs/
-!/htdocs/index.html
-docker-compose.override.yml
+
+/*
+/app/*
+
+!/.editorconfig
+!/.dockerignore
+!/.docker
+!/.env.dist
+!/.gitignore
+!/docker-compose.yml
+!/mutagen-compose.yml
+!/Makefile
+!/README.md
+!/app
