--- a/.docker/php/etc/php-fpm.conf
+++ b/.docker/php/etc/php-fpm.conf
@@ -21,9 +21,9 @@ pm.start_servers = 4
 pm.min_spare_servers = 2
 pm.max_spare_servers = 6
 
-env[APP_ENV] = !APP_ENV!; # Variable: APP_ENV
-
 clear_env = no
+
+env["APP_ENV"] = $APP_ENV; # Variable: APP_ENV
 
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
