--- a/.env.dist
+++ b/.env.dist
@@ -37,7 +37,11 @@ PORT_SSH=2220
 APP_ENV=dev
 
 # Helper
-XDEBUG_ENABLE=false
+SENDMAIL_ENABLE=false
+
+# Xdebug
 # The following values are accepted: off, develop, coverage, debug, gcstats, profile, trace
 XDEBUG_MODE=off
-SENDMAIL_ENABLE=false
+XDEBUG_IDEKEY=PHPSTORM
+XDEBUG_CLIENT_HOST=127.0.0.1
+XDEBUG_CLIENT_PORT=9003
