--- a/.docker/php/etc/php-xdebug.ini
+++ b/.docker/php/etc/php-xdebug.ini
@@ -2,9 +2,13 @@
 
 ; Xdebug settings will only kick in if the Xdebug module is loaded
 
-zend_extension=xdebug
+zend_extension = xdebug
 
 [xdebug]
-xdebug.mode=develop,debug
-xdebug.client_host=host.docker.internal
-xdebug.start_with_request=yes
+xdebug.mode = ${XDEBUG_MODE}
+xdebug.client_host = ${XDEBUG_CLIENT_HOST}
+xdebug.client_port = ${XDEBUG_CLIENT_PORT}
+xdebug.idekey = ${XDEBUG_IDEKEY}
+xdebug.start_with_request = yes
+xdebug.discover_client_host = yes
+xdebug.log_level = 0
