Add phpcs command to Makefile

--- a/.docker/toolbox/Dockerfile
+++ b/.docker/toolbox/Dockerfile
@@ -35,6 +35,9 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
     && chmod +x /usr/local/bin/phpcs \
     && curl -sS -L https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/latest/download/php-cs-fixer.phar -o /usr/bin/php-cs-fixer \
     && chmod +x /usr/bin/php-cs-fixer \
+# Install phpcbf
+    && curl -L https://github.com/squizlabs/PHP_CodeSniffer/releases/latest/download/phpcbf.phar > /usr/local/bin/phpcbf \
+    && chmod +x /usr/local/bin/phpcbf \
 # Finally clean caches
     && rm -rf /var/cache/apk/* /var/tmp/* /tmp/*
 
