Update environment to version 1.0.2

--- a/.env.dist
+++ b/.env.dist
@@ -7,11 +7,11 @@
 COMPOSE_PROJECT_NAME=alexanderweigelt
 
 # Tag your local image with unique id
-IMAGE_TAG=1.0.0
+IMAGE_TAG=1.0.2
 
 # Configures the time (in seconds) a request to the Docker daemon is allowed to hang before Compose considers it failed.
 # Defaults to 60 seconds.
-COMPOSE_HTTP_TIMEOUT=600
+#COMPOSE_HTTP_TIMEOUT=600
 
 # Set absolute path to the project root directory
 COMPOSE_PROJECT_ROOT=./app
