--- a/.env.dist
+++ b/.env.dist
@@ -6,16 +6,12 @@
 # the container names are created with folder name as project name.
 COMPOSE_PROJECT_NAME=alexanderweigelt
 
-# Development on macOS with docker for mac and mutagen.io compose support.
-# Please note that you have to create a docker-compose.override.yml to adjust php settings
-# COMPOSE_FILE=mutagen-compose.yml
-
 # Tag your local image with unique id
-IMAGE_TAG=1.0.0
+IMAGE_TAG=1.0.2
 
 # Configures the time (in seconds) a request to the Docker daemon is allowed to hang before Compose considers it failed.
 # Defaults to 60 seconds.
-COMPOSE_HTTP_TIMEOUT=600
+#COMPOSE_HTTP_TIMEOUT=600
 
 # Set absolute path to the project root directory
 COMPOSE_PROJECT_ROOT=./app
@@ -41,7 +37,11 @@ PORT_SSH=2220
 APP_ENV=dev
 
 # Helper
-XDEBUG_ENABLE=false
+SENDMAIL_ENABLE=false
+
+# Xdebug
 # The following values are accepted: off, develop, coverage, debug, gcstats, profile, trace
 XDEBUG_MODE=off
-SENDMAIL_ENABLE=false
+XDEBUG_IDEKEY=PHPSTORM
+XDEBUG_CLIENT_HOST=127.0.0.1
+XDEBUG_CLIENT_PORT=9003
