Fix: Makefile command 'build' failed

--- a/.env.dist
+++ b/.env.dist
@@ -7,7 +7,7 @@
 COMPOSE_PROJECT_NAME=alexanderweigelt
 
 # Tag your local image with unique id
-IMAGE_TAG=1.0.2
+IMAGE_TAG=1.0.3
 
 # Configures the time (in seconds) a request to the Docker daemon is allowed to hang before Compose considers it failed.
 # Defaults to 60 seconds.
@@ -43,5 +43,6 @@ SENDMAIL_ENABLE=false
 # The following values are accepted: off, develop, coverage, debug, gcstats, profile, trace
 XDEBUG_MODE=off
 XDEBUG_IDEKEY=PHPSTORM
+# To use xdebug with macOS and docker set: host.docker.internal
 XDEBUG_CLIENT_HOST=127.0.0.1
 XDEBUG_CLIENT_PORT=9003
