Fix for M1 apple-silcon error - Operation not supported: could not create accept mutex

--- a/.env.dist
+++ b/.env.dist
@@ -7,11 +7,16 @@
 COMPOSE_PROJECT_NAME=alexanderweigelt
 
 # Tag your local image with unique id
-IMAGE_TAG=1.0.3
+IMAGE_TAG=1.0.4
 
 # Configures the time (in seconds) a request to the Docker daemon is allowed to hang before Compose considers it failed.
 # Defaults to 60 seconds.
 #COMPOSE_HTTP_TIMEOUT=600
+
+# Forcing docker to use linux/amd64 platform by default on macOS
+# Forces docker to run all build and run commands with a platform linux/amd64 instead of linux/arm64/v8 by default on
+# macOS running on apple-silicon.
+#DOCKER_DEFAULT_PLATFORM=linux/amd64
 
 # Set absolute path to the project root directory
 COMPOSE_PROJECT_ROOT=./app
